fix warnings add changing blocks add tests for changing blocks